# tum_advprog

./: .clang-format  .clangd  .gitignore
10_performance/: matrix-mul-benchmark.cpp
1_intro/: .clang-format  simpleCalculator  simpleCalculator.cpp
2_data_types/: caseTrack.cpp  global_cases.csv  matVec.cpp
3_functions/: gcd.cpp  matVec.cpp
4_resource_man/: caseTrack.cpp  matvec.cpp
5_build_time/caseTrack/data/: ecdc_cases_june.csv
5_build_time/caseTrack/src/: CMakeLists.txt  Makefile  caseTrack.cpp  helper.cpp  helper.hpp
5_build_time/matVec/: CMakeLists.txt  matVec.cpp  matvec.cpp  testmatvec.cpp
6_oop_1/onlineMut/: Course.cpp  Course.h  Student.cpp  Student.h  StudentCard.cpp  StudentCard.h
6_oop_1/panSimul/: person.cpp  person.h
8_templates/sortable/: sortable.cpp
8_templates/vector/: CMakeLists.txt  Vec.h  main.cpp
9_stl/gameOfLife/: Matrix.h  game-of-life.cpp
